fix: コピーライト修正

--- a/src/components/common/_footer.pug
+++ b/src/components/common/_footer.pug
@@ -59,4 +59,4 @@ footer.footer
           p
             = profile.hour
     .copy-right
-      | &copy; 2022 大黒市
+      | &copy; 2021-2022 City of Daikoku
