--- a/src/components/pages/search-result.pug
+++ b/src/components/pages/search-result.pug
@@ -147,19 +147,19 @@ block pageOption
       },
     ]
 
-    const lifeScene = [
+    const filter = [
       {
-        label: "いざという時",
+        label: "出産",
         value: "1",
         checked: false
       },
       {
-        label: "妊娠",
+        label: "学びたい",
         value: "2",
         checked: false
       },
       {
-        label: "出産",
+        label: "手続き・届出する",
         value: "3",
         checked: false
       },
@@ -169,22 +169,22 @@ block pageOption
         checked: false
       },
       {
-        label: "引越し",
+        label: "関連項目",
         value: "5",
         checked: false
       },
       {
-        label: "住まい",
+        label: "関連項目",
         value: "6",
         checked: false
       },
       {
-        label: "就職",
+        label: "関連項目",
         value: "7",
         checked: false
       },
       {
-        label: "退職",
+        label: "関連項目",
         value: "8",
         checked: false
       },
@@ -209,173 +209,6 @@ block pageOption
         checked: false
       },
     ]
-
-    const status = [
-      {
-        label: "from abroad",
-        value: "1",
-        checked: false
-      },
-      {
-        label: "乳幼児",
-        value: "2",
-        checked: false
-      },
-      {
-        label: "小学生",
-        value: "3",
-        checked: false
-      },
-      {
-        label: "中学生",
-        value: "4",
-        checked: false
-      },
-      {
-        label: "高校生など",
-        value: "5",
-        checked: false
-      },
-      {
-        label: "大学生など",
-        value: "6",
-        checked: false
-      },
-      {
-        label: "成人",
-        value: "7",
-        checked: false
-      },
-      {
-        label: "高齢",
-        value: "8",
-        checked: false
-      },
-      {
-        label: "介護",
-        value: "9",
-        checked: false
-      },
-      {
-        label: "障がい",
-        value: "10",
-        checked: false
-      },
-      {
-        label: "ひとり親",
-        value: "11",
-        checked: false
-      },
-      {
-        label: "生活に困っている",
-        value: "12",
-        checked: false
-      },
-      {
-        label: "ペット・動物",
-        value: "13",
-        checked: false
-      },
-      {
-        label: "予備",
-        value: "14",
-        checked: false
-      },
-      {
-        label: "予備",
-        value: "15",
-        checked: false
-      },
-      {
-        label: "予備",
-        value: "16",
-        checked: false
-      },
-    ]
-
-    const matters = [
-      {
-        label: "情報を受け取る",
-        value: "1",
-        checked: false
-      },
-      {
-        label: "証明書が欲しい",
-        value: "2",
-        checked: false
-      },
-      {
-        label: "手続き・届出する",
-        value: "3",
-        checked: false
-      },
-      {
-        label: "選挙・投票する",
-        value: "4",
-        checked: false
-      },
-      {
-        label: "ごみを出したい",
-        value: "5",
-        checked: false
-      },
-      {
-        label: "医療を受けたい",
-        value: "6",
-        checked: false
-      },
-      {
-        label: "健康づくり",
-        value: "7",
-        checked: false
-      },
-      {
-        label: "学びたい",
-        value: "8",
-        checked: false
-      },
-      {
-        label: "働きたい",
-        value: "9",
-        checked: false
-      },
-      {
-        label: "遊びたい・楽しみたい",
-        value: "10",
-        checked: false
-      },
-      {
-        label: "役立ちたい",
-        value: "11",
-        checked: false
-      },
-      {
-        label: "生活トラブル",
-        value: "12",
-        checked: false
-      },
-      {
-        label: "悩み・相談したい",
-        value: "13",
-        checked: false
-      },
-      {
-        label: "注意点を知りたい",
-        value: "14",
-        checked: false
-      },
-      {
-        label: "年金を受けたい",
-        value: "15",
-        checked: false
-      },
-      {
-        label: "予備",
-        value: "16",
-        checked: false
-      },
-    ]
-
     const breadcrumbItem = [
       {
         text : "トップページ",
@@ -397,6 +230,7 @@ block pageOption
 include ../base/Accordion.pug
 include ../base/Breadcrumb.pug
 include ../base/Button.pug
+include ../base/LinkButton.pug
 include ../base/Banner.pug
 include ../base/Checkbox.pug
 include ../base/SearchResult.pug
@@ -432,12 +266,10 @@ block content
         +Pagination()
 
       aside.search-result-condition
-        h2.search-result-condition__title 
-          | 検索項目を変更する
         form.search-result-condition__form
-          +Accordion({title: "change-life-scene", items: [{label: "人生の出来事"}]})
+          +Accordion({title: "change-life-scene", items: [{label: "さらに絞り込む"}]})
             ul.scene-list 
-              each item in lifeScene 
+              each item in filter 
                 li.scene-list__item
                   +Checkbox({
                     id: `life-scene__${item.value}`,
@@ -446,31 +278,23 @@ block content
                     checked: item.checked,
                     label: item.label,
                   })
-          +Accordion({title: "change-status", items: [{label: "あなたの状況"}]})
-            ul.status-list 
-              each item in status 
-                li.status-list__item
-                  include ../../components/base/Checkbox.pug
-                  +Checkbox({
-                    id: `status__${item.value}`,
-                    name: "status",
-                    value: item.value,
-                    checked: item.checked,
-                    label: item.label,
-                  })
-          +Accordion({title: "change-matters", items:[{label: "ご用件"}]})
-            ul.matters-list 
-              each item in matters 
-                li.matters-list__item
-                  +Checkbox({
-                    id: `matters__${item.value}`,
-                    name: "matters",
-                    value: item.value,
-                    checked: item.checked,
-                    label: item.label,
-                  })
-          .search-result-condition__btn
-            +Button({label: "検索する", type:"submit"})
+            .search-result-condition-filter
+              p.search-result-condition-filter__count 
+                = results.length === 0 ? `該当するページはありません` :`${results.length} 件が該当します`
+            .search-result-condition__btn
+              +Button({
+                label: "検索する",
+                type:"submit",
+                primary: true,
+                disabled: results.length === 0 ? true : false
+              })
+          .search-back
+            +LinkButton({
+              label: "選んで探すに戻る",
+              secondary: true,
+              link: "./search.html"
+            })
+
 
 
 
