--- a/src/components/pages/search.pug
+++ b/src/components/pages/search.pug
@@ -42,4 +42,8 @@ block content
 
 			.section-content.layout-default
 				.search-btn__container
-					+Button({type: "submit", label: "検索する"})
+					+Button({
+						type: "submit",
+						label: "検索する",
+						primary: true
+					})
