--- a/src/stylesheets/common/_header.scss
+++ b/src/stylesheets/common/_header.scss
@@ -114,9 +114,14 @@
 		// 	// 	transform: translateY(0);
 		// 	// }
 		// }
-		// &__search {
-		// 	border-right: 1px solid #fff;
-		// }
+		&__search {
+			.link-btn {
+				&__link {
+					border-radius: 0;
+					padding: 16px 24px;
+				}
+			}
+		}
 		// .icon-wrapper {
 		// 	display: flex;
 		// 	flex-direction: column;
