--- a/src/stylesheets/page/_search-result.scss
+++ b/src/stylesheets/page/_search-result.scss
@@ -29,11 +29,12 @@
 		font-weight: bold;
 	}
 	&__form {
-		margin: 24px 0;
+		margin-bottom: 24px;
 	}
 	&__btn {
 		text-align: center;
-		margin-top: 24px;
+		margin-top: 8px;
+		margin-bottom: 16px;
 	}
 
 	.scene-list {
@@ -82,6 +83,13 @@
 			border-radius: 8px;
 			width: calc(50% - 2px);
 		}
+	}
+}
+.search-result-condition-filter {
+	margin-top: 16px;
+	&__count {
+		text-align: center;
+		color: colors(primary);
 	}
 }
 
@@ -167,6 +175,11 @@
 			top: 6px;
 		}
 	}
+}
+.search-back {
+	display: flex;
+	justify-content: center;
+	margin-top: 56px;
 }
 @media only screen and (max-width: breakpoint(sp)) {
 	.search-result {
