--- a/src/components/pages/category-top.pug
+++ b/src/components/pages/category-top.pug
@@ -589,6 +589,7 @@ block content
   +Breadcrumb({items: breadcrumbItem})
   section.section-content__header
     +Banner({
+      basePath: "../../images/common/",
       title: "妊娠から子育て",
       description: `${breadcrumbItem.length}件の新着情報があります。`,
       help: {
