--- a/src/components/pages/search-result.pug
+++ b/src/components/pages/search-result.pug
@@ -242,6 +242,7 @@ block content
 
   section.section-content__header
     +Banner({
+      basePath: "../../images/common/",
       title: "選んで探す 検索結果",
       description: "「⚫︎⚫︎」、「⚫︎⚫︎」、「⚫︎⚫︎」の検索結果です",
       icon: "search_menu_img.png"
