--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -28,6 +28,7 @@
 @import "base/viewed-link";
 @import "base/chip";
 @import "base/switch-button";
+@import "base/incremental-search";
 @import "common/accessibility";
 @import "common/header";
 @import "common/slick";
@@ -55,3 +56,4 @@
 @import "page/detail";
 @import "page/category-top";
 @import "page/site-map";
+@import "page/organization";
