--- a/src/components/pages/search.pug
+++ b/src/components/pages/search.pug
@@ -24,6 +24,7 @@ block content
 
 	section.section-content__header
 		+Banner({
+			basePath: "../../images/common/",
 			title: "選んで探す",
 			description: "人生の出来事、「こんなことがしたい」「知りたい」といったことを\n選択いただくことで、ご自身に合った検索ができます。",
 			icon: "search_menu_img.png"
