--- a/src/stylesheets/base/_banner.scss
+++ b/src/stylesheets/base/_banner.scss
@@ -4,18 +4,18 @@
 	border-radius: 8px;
 	margin-top: 40px;
 	position: relative;
-	padding: 60px 0;
+	padding: 48px 0;
 
 	&__title {
 		text-align: center;
 		font-size: 36px;
 		font-weight: bold;
-		margin-bottom: 16px;
 	}
 	&__description {
 		text-align: center;
 		color: #707070;
 		white-space: pre-wrap;
+		margin-top: 16px;
 	}
 	&__icon {
 		width: auto;
