--- a/src/components/common/_footer.pug
+++ b/src/components/common/_footer.pug
@@ -1,24 +1,16 @@
 -
   const links = [
     {
-      link : "https://www.pref.fukui.lg.jp/syozoku.html#D010000",
-      text : "このサイトについて",
+      link : "./site-map.html",
+      text : "サイトマップ",
     },
     {
-      link : "https://www.pref.fukui.lg.jp/syozoku.html#D013400",
+      link : "#",
       text : "プライバシーポリシー",
     },
     {
-      link : "https://www.pref.fukui.lg.jp/syozoku.html#D013600",
+      link : "#",
       text : "著作権・リンク・免責事項",
-    },
-    {
-      link : "https://www.pref.fukui.lg.jp/syozoku.html#D014000",
-      text : "お問い合わせ窓口一覧",
-    },
-    {
-      link : "https://www.pref.fukui.lg.jp/syozoku.html#D016007",
-      text : "よくあるご質問",
     },
   ]
 
