--- a/src/stylesheets/common/_footer.scss
+++ b/src/stylesheets/common/_footer.scss
@@ -20,8 +20,7 @@
 	}
 	&__list {
 		display: flex;
-		align-items: center;
-		justify-content: space-around;
+		gap: 48px;
 	}
 }
 .footer-profile {
