--- a/src/components/common/_header.pug
+++ b/src/components/common/_header.pug
@@ -55,7 +55,7 @@ header.header
         a(href="/")
           img(src="../../images/common/daikoku-icon.png" alt="大黒市" class="logo")
       .header__search
-        a.header-link(href="/")
+        a.header-link(href="./keyword-search.html")
           i(class="fas fa-search search-icon")
           p.header-link__text 
             | 検索
