--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -28,6 +28,10 @@
 @import "base/viewed-link";
 @import "base/chip";
 @import "base/switch-button";
+@import "base/section";
+@import "base/input";
+@import "base/link-chip";
+@import "base/link-chip-list";
 @import "common/accessibility";
 @import "common/header";
 @import "common/slick";
@@ -47,6 +51,8 @@
 @import "parts/hero";
 @import "parts/anchor-list";
 @import "parts/feature";
+@import "parts/keyword-input";
+@import "parts/search-help";
 @import "common/footer";
 @import "page/index";
 @import "page/search";
@@ -55,3 +61,4 @@
 @import "page/detail";
 @import "page/category-top";
 @import "page/site-map";
+@import "page/keyword-search";
