--- a/src/stylesheets/page/_category-top.scss
+++ b/src/stylesheets/page/_category-top.scss
@@ -9,6 +9,9 @@
 	&__count {
 		font-size: 24px;
 		font-weight: bold;
+		.result-count {
+			margin-right: 8px;
+		}
 	}
 	&__category {
 		margin: 24px 0;
@@ -20,6 +23,10 @@
 		border-radius: 8px;
 		padding: 32px 24px;
 		width: calc(70% - 16px);
+		.no-result-text {
+			text-align: center;
+			margin: 16px 0;
+		}
 	}
 	.search-result-condition {
 		width: calc(30% - 16px);
