fix: 組織一覧sticky実装

--- a/src/components/pages/index.pug
+++ b/src/components/pages/index.pug
@@ -4,11 +4,11 @@ block pageOption
 	- contentClass.push('index-container')
 
 block content
-	section.section-content
-		include ../parts/_alert.pug
-
 	//- section.section-content
-	//- 	include ../parts/_hero.pug
+	//- 	include ../parts/_alert.pug
+
+	section.section-content
+		include ../parts/_hero.pug
 
 	//- section.section-content
 	//- 	include ../parts/_slider.pug
