--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -54,6 +54,7 @@
 @import "parts/feature";
 @import "parts/keyword-input";
 @import "parts/search-help";
+@import "parts/department-list";
 @import "common/footer";
 @import "page/index";
 @import "page/search";
