--- a/src/stylesheets/parts/_hero.scss
+++ b/src/stylesheets/parts/_hero.scss
@@ -7,7 +7,7 @@
 		margin-bottom: 40px;
 	}
 	.hero-img {
-		object-fit: cover;
+		object-fit: fill;
 		position: absolute;
 		width: 100%;
 		height: 100%;
@@ -38,7 +38,6 @@
 @media only screen and (max-width: breakpoint(sp)) {
 	.section-content {
 		position: relative;
-		overflow: hidden;
 		&__hero {
 			.logo-img {
 				top: 30%;
