--- a/src/stylesheets/page/_organization.scss
+++ b/src/stylesheets/page/_organization.scss
@@ -5,7 +5,7 @@
 		position: relative;
 	}
 	&__body {
-		@extend .layout-default;
+		// @extend .layout-default;
 	}
 	&__input {
 		margin-top: 16px;
