--- a/src/stylesheets/base/_accordion.scss
+++ b/src/stylesheets/base/_accordion.scss
@@ -1,5 +1,8 @@
 .accordion {
+	border-radius: 8px;
 	&__list {
+		@extend .box-shadow;
+		border-radius: 8px;
 		width: 100%;
 		max-width: 1024px;
 		margin: 0 auto;
@@ -8,16 +11,17 @@
 		background-color: #fff;
 		color: #3b4043;
 		font-weight: bold;
+		border-radius: 8px;
 		&:hover {
 			opacity: 0.8;
 		}
 	}
 }
 .accordion-trigger {
+	border-radius: 8px;
 	position: relative;
 	padding: 16px;
 	width: 100%;
-	border: 1px solid #cdd6dd;
 	&:focus:not(:focus-visible) {
 		outline: none;
 	}
@@ -25,6 +29,7 @@
 		outline: 2px solid #0000ff;
 	}
 	&[aria-expanded="true"] {
+		border-radius: 8px 8px 0 0;
 		.accordion-trigger__icon {
 			transform: rotate(180deg);
 		}
@@ -34,12 +39,23 @@
 		justify-content: space-between;
 		align-items: center;
 	}
+	&__label {
+		display: flex;
+		align-items: center;
+		gap: 8px;
+		&--help {
+			@extend .accordion-trigger__label;
+			color: colors(primary);
+		}
+	}
 }
 .accordion-panel {
 	height: auto;
-	border: 1px solid #ccc;
+	// border: 1px solid #ccc;
+	background-color: #fff;
 	border-top: none;
 	padding: 8px;
+	border-radius: 0 0 8px 8px;
 	&[aria-hidden="true"] {
 		visibility: hidden;
 		line-height: 0;
