fix: インクリメンタル検索実装

--- a/src/components/pages/organization.pug
+++ b/src/components/pages/organization.pug
@@ -32,7 +32,7 @@ block content
   +Section()
     h2.section-content__heading 
       | フリーワード検索
-    .section-content__input
+    .section-content__input.organization-search
       +Input({
         placeholder: "部署名・業務などを入力してください"
       })
