--- a/src/stylesheets/parts/_department-list.scss
+++ b/src/stylesheets/parts/_department-list.scss
@@ -39,7 +39,6 @@
 			display: flex;
 			align-items: center;
 			justify-content: space-between;
-			// gap: 48px;
 			margin-bottom: 24px;
 		}
 		&__title {
@@ -54,7 +53,7 @@
 				background-color: colors(primary);
 				position: absolute;
 				top: 10px;
-				left: 0.2em;
+				left: 0;
 			}
 		}
 		&__body {
