feat: faqページ実装（検索未実装）

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -55,6 +55,9 @@
 @import "parts/keyword-input";
 @import "parts/search-help";
 @import "parts/department-list";
+@import "parts/tips";
+@import "parts/questions";
+@import "parts/answer-section";
 @import "common/footer";
 @import "page/index";
 @import "page/search";
