--- a/src/stylesheets/base/_section.scss
+++ b/src/stylesheets/base/_section.scss
@@ -8,7 +8,7 @@
 		max-width: 1024px;
 		margin-top: 48px;
 		margin-bottom: 48px;
-		padding: 40px 16px;
+		padding: 40px 80px;
 	}
 }
 @media only screen and (max-width: breakpoint(sp)) {
@@ -16,5 +16,8 @@
 		max-width: 100%;
 		padding-left: 16px;
 		padding-right: 16px;
+		&__content {
+			padding: 40px 24px;
+		}
 	}
 }
