--- a/src/components/common/_layout.pug
+++ b/src/components/common/_layout.pug
@@ -26,4 +26,5 @@ html(lang="ja")
     .main(class=contentClass)
       block content
 
+    include ../parts/_top-button.pug
     include ./_footer.pug
