fix: キーワード検索実装

--- a/src/components/base/Input.pug
+++ b/src/components/base/Input.pug
@@ -6,5 +6,5 @@ mixin Input(params={})
         = props.label
     .input-form
       input.input-form__input(type="text" placeholder=props.placeholder)
-      button.input-form__btn 
+      button.input-form__btn(type="submit")
         i(class="fas fa-search")
