--- a/src/components/pages/search-result.pug
+++ b/src/components/pages/search-result.pug
@@ -1,152 +1,8 @@
 extends ../common/_layout
 
 block pageOption 
+  include ../../data/_data.pug
   -
-    const results = [
-      {
-        title: "母子父子寡婦福祉資金貸付制度1",
-        categories: [
-          {
-            label: "ひとり親",
-          },
-          {
-            label: "手当と助成",
-          },
-        ],
-        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
-        summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
-        application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
-        link: "./detail.html"
-      },
-      {
-        title: "母子父子寡婦福祉資金貸付制度2",
-        categories: [
-          {
-            label: "ひとり親",
-          },
-          {
-            label: "手当と助成",
-          },
-        ],
-        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
-        summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
-        application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
-        link: "./detail.html"
-      },
-      {
-        title: "母子父子寡婦福祉資金貸付制度3",
-        categories: [
-          {
-            label: "ひとり親",
-          },
-          {
-            label: "手当と助成",
-          },
-        ],
-        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
-        summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
-        application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
-      },
-      {
-        title: "母子父子寡婦福祉資金貸付制度4",
-        categories: [
-          {
-            label: "ひとり親",
-          },
-          {
-            label: "手当と助成",
-          },
-        ],
-        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
-        summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
-        application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
-      },
-      {
-        title: "母子父子寡婦福祉資金貸付制度5",
-        categories: [
-          {
-            label: "ひとり親",
-          },
-          {
-            label: "手当と助成",
-          },
-        ],
-        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
-        summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
-        application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
-      },
-      {
-        title: "母子父子寡婦福祉資金貸付制度6",
-        categories: [
-          {
-            label: "ひとり親",
-          },
-          {
-            label: "手当と助成",
-          },
-        ],
-        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
-        summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
-        application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
-      },
-      {
-        title: "母子父子寡婦福祉資金貸付制度7",
-        categories: [
-          {
-            label: "ひとり親",
-          },
-          {
-            label: "手当と助成",
-          },
-        ],
-        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
-        summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
-        application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
-      },
-      {
-        title: "母子父子寡婦福祉資金貸付制度8",
-        categories: [
-          {
-            label: "ひとり親",
-          },
-          {
-            label: "手当と助成",
-          },
-        ],
-        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
-        summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
-        application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
-      },
-      {
-        title: "母子父子寡婦福祉資金貸付制度9",
-        categories: [
-          {
-            label: "ひとり親",
-          },
-          {
-            label: "手当と助成",
-          },
-        ],
-        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
-        summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
-        application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
-      },
-      {
-        title: "母子父子寡婦福祉資金貸付制度10",
-        categories: [
-          {
-            label: "ひとり親",
-          },
-          {
-            label: "手当と助成",
-          },
-        ],
-        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
-        summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
-        application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
-      },
-    ]
-
     const filter = [
       {
         label: "出産",
