--- a/src/components/pages/keyword-search-result.pug
+++ b/src/components/pages/keyword-search-result.pug
@@ -57,12 +57,16 @@ include ../base/Checkbox.pug
 include ../base/SearchResult.pug
 include ../base/Pagination.pug
 include ../base/Radio.pug
+include ../parts/_keyword-input.pug
 
 block content
   include ../parts/_global-navi.pug
   +Breadcrumb({items: breadcrumbItem})
 
-  include ../parts/_keyword-input.pug
+  +KeywordInput({
+    title: "キーワードで検索する",
+    placeholder: "キーワードを入力"
+  })
 
   section.section-content
     .keyword-search-result
