--- a/src/stylesheets/page/_keyword-search-result.scss
+++ b/src/stylesheets/page/_keyword-search-result.scss
@@ -41,6 +41,7 @@
 	&__list {
 		display: flex;
 		flex-direction: column;
+		flex-wrap: wrap;
 		gap: 4px;
 	}
 	&__item {
@@ -53,14 +54,10 @@
 		background-color: #fff;
 		position: relative;
 	}
-	&__radio {
-		flex-basis: 80%;
-	}
 	&__count {
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		flex-basis: 20%;
 		width: 32px;
 		padding-right: 4px;
 		.count {
@@ -73,6 +70,28 @@
 			background-color: #dd1500;
 			border-radius: 50px;
 			color: #fff;
+		}
+	}
+}
+@media (max-width: breakpoint(sp)) {
+	.keyword-search-result {
+		flex-direction: column-reverse;
+	}
+	.keyword-search-result-main,
+	.keyword-search-result-condition {
+		width: 100%;
+	}
+	.keyword-search-result-condition {
+		.radio-list {
+			&__list {
+				flex-direction: row;
+			}
+			&__item:first-child {
+				width: 100%;
+			}
+			&__item:not(:first-child) {
+				width: calc(50% - 4px);
+			}
 		}
 	}
 }
