--- a/src/stylesheets/parts/_hero.scss
+++ b/src/stylesheets/parts/_hero.scss
@@ -38,28 +38,30 @@
 @media only screen and (max-width: breakpoint(sp)) {
 	.section-content {
 		position: relative;
-		&__hero {
-			.logo-img {
-				top: 30%;
-				left: 50%;
-				transform: translate(-50%, -50%);
-				width: 200px;
-				z-index: 1;
-			}
-			.label-img-pc {
-				display: none;
-			}
-			.label-img-sp {
-				display: block;
-				animation: fadeIn 2s;
-				position: absolute;
-				top: 74%;
-				left: 50%;
-				transform: translate(-50%, -50%);
-				width: 100%;
-				max-width: 160px;
-				z-index: 1;
-			}
+
+		.hero-img {
+			object-fit: cover;
+		}
+		.logo-img {
+			top: 30%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			width: 200px;
+			z-index: 1;
+		}
+		.label-img-pc {
+			display: none;
+		}
+		.label-img-sp {
+			display: block;
+			animation: fadeIn 2s;
+			position: absolute;
+			top: 74%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			width: 100%;
+			max-width: 160px;
+			z-index: 1;
 		}
 	}
 }
