--- a/src/stylesheets/base/_banner.scss
+++ b/src/stylesheets/base/_banner.scss
@@ -35,6 +35,7 @@
 		justify-content: center;
 		gap: 4px;
 		color: colors(primary);
+		margin-top: 12px;
 		&:hover {
 			text-decoration: underline;
 			opacity: 0.8;
