--- a/src/stylesheets/base/_search-result.scss
+++ b/src/stylesheets/base/_search-result.scss
@@ -41,3 +41,14 @@
 		overflow: hidden;
 	}
 }
+@media (max-width: breakpoint(sp)) {
+	.search-result {
+		&__title {
+			&--new {
+				&::after {
+					top: initial;
+				}
+			}
+		}
+	}
+}
