--- a/src/stylesheets/page/_category-top.scss
+++ b/src/stylesheets/page/_category-top.scss
@@ -60,27 +60,33 @@
 			background-color: #fff;
 			position: relative;
 		}
-		&__radio {
-			flex-basis: 80%;
-		}
 		&__count {
 			display: flex;
 			align-items: center;
 			justify-content: center;
-			flex-basis: 20%;
 			width: 32px;
 			padding-right: 4px;
 			.count {
-				width: 30px;
-				height: 30px;
-				padding: 4px 4px;
-				text-align: center;
+				width: 24px;
+				height: 24px;
+				padding: 0;
 				font-size: 12px;
 				font-weight: bold;
 				background-color: #dd1500;
 				border-radius: 50px;
 				color: #fff;
 			}
+		}
+	}
+	.checkbox-list {
+		&__list {
+			display: flex;
+			flex-direction: column;
+			gap: 8px;
+		}
+		&__item {
+			border: 1px solid #cdd6dd;
+			border-radius: 8px;
 		}
 	}
 }
