--- a/src/stylesheets/base/_banner.scss
+++ b/src/stylesheets/base/_banner.scss
@@ -45,9 +45,9 @@
 
 @media (max-width: breakpoint(sp)) {
 	.banner {
-		padding: 24px 0 60px 0;
+		padding: 24px 8px 60px 8px;
 		&__title {
-			font-size: 30px;
+			font-size: 28px;
 		}
 		&__icon {
 			width: auto;
