--- a/src/stylesheets/parts/_top-button.scss
+++ b/src/stylesheets/parts/_top-button.scss
@@ -13,9 +13,11 @@
 	padding: 32px;
 	background: #fff;
 	text-decoration: none;
+	visibility: hidden;
 	opacity: 0;
 	transition: all 0.4s;
 	&[aria-hidden="false"] {
+		visibility: visible;
 		opacity: 1;
 		transition: all 0.4s;
 	}
