--- a/src/stylesheets/base/_base.scss
+++ b/src/stylesheets/base/_base.scss
@@ -39,13 +39,13 @@ body {
 	}
 	&__contact {
 		@extend .layout-default;
-		margin-top: 40px;
-		margin-bottom: 40px;
+		padding-top: 40px;
+		padding-bottom: 40px;
 	}
 	&__viewed {
 		@extend .layout-default;
 		margin-top: 40px;
-		margin-bottom: 40px;
+		padding-bottom: 40px;
 	}
 }
 .content-title {
